--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World! This is my website.
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Personal Website</title>
+    </head>
+    <body>
+        Hello World! This is my website.
+    </body>
+
+</html>
