--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,30 @@
         <title>Resume</title>
     </head>
     <body>
-        Hello World! This is my website.
+        <nav>
+        </nav>
+
+        <main>
+            Hello World! This is my website.
+            <section>
+            </section>
+
+            <section>
+            </section>
+
+            <section>
+            </section>
+
+            <section>
+            </section>
+
+            <section>
+            </section>
+        </main>
+        
+        <footer>
+            © 2023 Evan Cao's Website | All Rights Reserved
+        </footer>
     </body>
 
 </html>
