--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         </nav>
 
         <main>
-            Hello World! This is my website.
+            <h1>Evan Cao</h1>
+            <p>I am a <strong>2nd Year</strong> <em>Computer Science</em> Major at Cal Poly SLO</p> 
+            <p>I have experience in Full Stack Development and am seeking <strong>Software Engineer Intern</strong> roles.</p>
         </main>
         
         <footer>
