feat finished lab21

--- a/resume.html
+++ b/resume.html
@@ -4,28 +4,39 @@
         <title>Resume</title>
     </head>
     <body>
-        <nav>
+        <nav class="navbar">
+            <h1 class="logo">Evan Cao</h1>
         </nav>
 
         <main>
+            <h1 class="page-resume">Resume</h1>
             Hello World! This is my website.
-            <section>
-            </section>
+            <div class="resume">
+                <section class="section">
+                    <h2 class="section-title">Education</h2>
+                </section>
 
-            <section>
-            </section>
 
-            <section>
-            </section>
+                <section class="section">
+                    <h2 class="section-title">Experience</h2>
+                </section>
 
-            <section>
-            </section>
+                <section class="section">
+                    <h2 class="section-title">Skills</h2>
+                </section>
 
-            <section>
-            </section>
+                <section class="section">
+                    <h2 class="section-title">Projects</h2>
+                </section>
+
+                <section class="section">
+                    <h2 class="section-title">Coursework</h2>
+                </section>
+            </div>
+            
         </main>
         
-        <footer>
+        <footer class="footer">
             © 2023 Evan Cao's Website | All Rights Reserved
         </footer>
     </body>
