--- a/blog.html
+++ b/blog.html
@@ -4,14 +4,16 @@
         <title>Blog</title>
     </head>
     <body>
-        <nav>
+        <nav class="navbar">
+            <h1 class="logo">Evan Cao</h1>
         </nav>
 
         <main>
+            <h1 class="page-blog">Blog</h1>
             Hello World! This is my website.
         </main>
         
-        <footer>
+        <footer class="footer">
             © 2023 Evan Cao's Website | All Rights Reserved
         </footer>
     </body>
