--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
         <title>Personal Website</title>
     </head>
     <body>
-        <nav>
+        <nav class="navbar">
+            <h1 class="logo">Evan Cao</h1>
         </nav>
 
         <main>
-            <h1>Evan Cao</h1>
-            <p>I am a <strong>2nd Year</strong> <em>Computer Science</em> Major at Cal Poly SLO</p> 
-            <p>I have experience in Full Stack Development and am seeking <strong>Software Engineer Intern</strong> roles.</p>
+            <h1 class="page-index">Evan Cao</h1>
+            <div class = "about">
+                <div class ="about-image"></div>
+
+                <div class ="about-text">
+                    <p>I am a <strong>2nd Year</strong> <em>Computer Science</em> Major at Cal Poly SLO</p> 
+                    <p>I have experience in Full Stack Development and am seeking <strong>Software Engineer Intern</strong> roles.</p>
+                </div>
+            </div>
         </main>
         
-        <footer>
+        <footer class="footer">
             © 2023 Evan Cao's Website | All Rights Reserved
         </footer>
     </body>
