--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,17 @@
         <title>Portfolio</title>
     </head>
     <body>
-        <nav>
+        <nav class="navbar">
+            <h1 class="logo">Evan Cao</h1>
         </nav>
 
         <main>
+            <h1 class="page-portfolio">Portfolio</h1>
+            <div class="project"></div>
             Hello World! This is my website.
         </main>
         
-        <footer>
+        <footer class="footer">
             © 2023 Evan Cao's Website | All Rights Reserved
         </footer>
     </body>
