--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     </head>
     <body>
         <nav class="navbar">
-            <h1 class="logo">Evan Cao</h1>
+            <h1 class="logo">
+                <a href="index.html">personal website</a>
+            </h1>
+            <ul class="nav-list">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
 
         <main>
             <h1 class="page-index">Evan Cao</h1>
             <div class = "about">
-                <div class ="about-image"></div>
+                <div class ="about-image">
+                    <img src="sky.jpg" alt="A picture of the sky">
+                </div>
 
                 <div class ="about-text">
                     <p>I am a <strong>2nd Year</strong> <em>Computer Science</em> Major at Cal Poly SLO</p> 
