--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,9 @@
     </head>
     <body>
         <nav class="navbar">
-            <h1 class="logo">Evan Cao</h1>
+            <h1 class="logo">
+                <a href="index.html">personal website</a>
+            </h1>
         </nav>
 
         <main>
