--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Contatc</title>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <nav class="navbar">
