--- a/portfolio.html
+++ b/portfolio.html
@@ -2,11 +2,13 @@
 <html>
     <head>
         <title>Portfolio</title>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <nav class="navbar">
             <h1 class="logo">
                 <a href="index.html">personal website</a>
+                
             </h1>
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
