feat finish up the web page

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <body>
         <nav class="navbar">
             <h1 class="logo">
-                <a href="index.html">personal website</a>
+                <a href="index.html">Evan Cao's Virtual World</a>
             </h1>
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
@@ -19,8 +19,7 @@
         </nav>
 
         <main>
-            <h1 class="page-contact">Contact</h1>
-            Hello World! This is my website.
+            <h1 class="page-title">Contact</h1>
             <br><br>
 
             <form id="contact-form">
