--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <body>
         <nav class="navbar">
             <h1 class="logo">
-                <a href="index.html">personal website</a>
+                <a href="index.html">Evan Cao's Virtual World</a>
                 
             </h1>
             <ul class="nav-list">
@@ -20,8 +20,8 @@
         </nav>
 
         <main>
-            <h1 class="page-blog">Blog</h1>
-            Hello World! This is my website.
+            <h1 class="page-title">Blog</h1>
+            Currently empty...
         </main>
         
         <footer class="footer">
