--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
+
     <head>
-        <title>Personal Website</title>
+        <title>Evan Cao</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
+
     <body>
         <nav class="navbar">
             <h1 class="logo">
-                <a href="index.html">personal website</a>
+                <a href="index.html">Evan Cao's Virtual World</a>
             </h1>
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
@@ -19,15 +21,16 @@
         </nav>
 
         <main>
-            <h1 class="page-index">Evan Cao</h1>
+            <h1 class="page-title">Welcome to my Virtual World!</h1>
             <div class = "about">
                 <div class ="about-image">
-                    <img src="sky.jpg" alt="A picture of the sky">
+                    <img src="hike.png" alt="A picture of the sky">
                 </div>
 
                 <div class ="about-text">
-                    <p>I am a <strong>2nd Year</strong> <em>Computer Science</em> Major at Cal Poly SLO</p> 
-                    <p>I have experience in Full Stack Development and am seeking <strong>Software Engineer Intern</strong> roles.</p>
+                    <p>Hi, my name is Evan Cao!</p>
+                    <p>I am a <strong>2nd Year</strong> <em>Computer Science</em> Major at Cal Poly SLO.</p> 
+                    <p>A fun fact about me is that I once traveled 15 miles to Montaña De Oro just to take a piss outside the restroom.</p>
                 </div>
             </div>
         </main>
@@ -36,5 +39,6 @@
             © 2023 Evan Cao's Website | All Rights Reserved
         </footer>
     </body>
+
 
 </html>
